tests/paczka1/small_fuzzy/88240912.err
Error in line 4: MQtuuaS S152 32,4
Error in line 5: S299 S299 89,7
